[project]
name = "assetmanagement"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pybithumb>=1.0.21",
    "pydantic>=2.11.9",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
