[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assetmanagement"
dynamic = ["version"]
description = "Crypto trading library for turtle trading strategy"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "aiohttp>=3.12.15",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pybithumb>=1.0.21",
    "pydantic>=2.11.9",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
]

[tool.hatch.version]
path = "version.py"

[tool.hatch.build.targets.wheel]
packages = [
    "accounts",
    "common",
    "indicators",
    "interfaces",
    "strategies"
]
include = [
    "*.py",
    "accounts/**/*.py",
    "common/**/*.py",
    "indicators/**/*.py",
    "interfaces/**/*.py",
    "strategies/**/*.py"
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
]
